@@ -51,6 +51,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.4[Check the HEAD diff]
 *Filebeat*
 
 - Fixed a memory leak when harvesters are closed. {pull}7820[7820]
+- Fixed a docker input error due to the offset update bug in partial log join.{pull}8177[8177]
 
 *Heartbeat*
 
